--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
 /* custom scrollbar */
 ::-webkit-scrollbar {
   width: 20px;
+  height: 20px;
 }
 
 ::-webkit-scrollbar-track {
